--- a/views/users/login.handlebars
+++ b/views/users/login.handlebars
@@ -1,3 +1,17 @@
+{{#if user}}
+
+
+
+<div class="jumbotron text-center">
+     
+  <h1 class="display-3"> Hey {{user.name}} hope you are doing well!</h1>
+ 
+
+  
+</div>
+
+{{else}}
+
 <div class="row">
   <div class="col-md-6 mx-auto">
     <div class="card card-body">
@@ -17,3 +31,8 @@
     </div>
   </div>
 </div>
+
+
+
+
+{{/if}}
