--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -8,7 +8,9 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
           {{#if user}}
-        
+          <li class="nav-item">
+          <a class="nav-link btn " style="background-color:#494949;box-shadow: 2px 2px 2px; color:black;" href="/users/home"><b style="color:white;">home</b></a>
+        </li>
         {{else}}
         <li class="nav-item">
           <a class="nav-link btn " style="background-color:#494949;box-shadow: 2px 2px 2px; color:black;" href="/"><b style="color:white;">Login</b></a>
