testing url added

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,7 +1,8 @@
 <div class="jumbotron text-center">
  <ul>
   {{#each users}}
-    <li>{{email}}</li>
+    <li>{{email}} hey {{date}}</li>
+    
   {{/each}}
  </ul>
 </div>
