--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -9,7 +9,7 @@
       <ul class="navbar-nav">
           {{#if user}}
           <li class="nav-item">
-          <a class="nav-link btn " style="background-color:#494949;box-shadow: 2px 2px 2px; color:black;" href="/users/home"><b style="color:white;">home</b></a>
+          <a class="nav-link btn " style="background-color:#494949;box-shadow: 2px 2px 2px; color:black;" href="/users/home"><b style="color:white;">Hey {{user.name}}</b></a>
         </li>
         {{else}}
         <li class="nav-item">
